2008-04-28  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: a bit of code cleanup, thanks to Yuriy,
	http://bugzilla.gnome.org/show_bug.cgi?id=529760

2008-04-25  Callum McKenzie  <callum@spooky-possum.org>

	* gswitchit-applet.c: C89 compilation fix from Jens Granseuer (see
	bug #529246).

2008-04-23  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: fixed email

2008-04-05  Ilkka Tuohela <hile@iki.fi>

	* help/fi: Added Finnish translation by Jukka Heikkilä.

2008-03-23  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: updating from deprecated function (bug #523704)

2008-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* gswitchit.ui
	* Makefile.am
	* gswitchit-applet.c: Convert from glade to
	gtk-builder. Patch from Jaap Haitsma (bug #521082).

2008-03-12  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am:
	* gswitchit-applet.c:
	* GNOME_KeyboardApplet.server.in.in: Patch from Jaap Haitsma to
	use the standard tango naming scheme (Bug #519758).

2008-01-14  Gil Forcada  <gforcada@gnome.org>

	* help/ca/ca.po: Added Catalan translation.

2008-01-06  Sergey Udaltsov <svu@gnome.org>

	* gswitchit.glade: gtk-print is untranslatable,
	http://bugzilla.gnome.org/show_bug.cgi?id=507533

2007-12-17  Sergey Udaltsov <svu@gnome.org>

	* gswitchit.glade, gswitchit-applet.c: add printing of the layout,
	from preview

2007-08-26  Sergey Udaltsov <svu@gnome.org>

	* GNOME_KeyboardApplet.server.in.in: does not work after first login,
	http://bugzilla.gnome.org/show_bug.cgi?id=470496

2007-08-10  Sergey Udaltsov <svu@gnome.org>

	* GNOME_GSwitchItApplet.xml, gswitchit-applet.c: dynamic menu item
	"Plugins" added (instead of the capplet, now hidden in g-c-c)

2007-08-08  Simos Xenitellis  <simos@gnome.org>

	* help/el/el.po: Added Greek translation by Dimitrios Typaldos 
	<dtfedora@yahoo.com>
	* help/Makefile.am: Added el to DOC_LINGUAS.

2007-07-17  Jaap Haitsma  <jaap@haitsma.org>
