@@ -1,3 +1,8 @@
+2008-09-02  Callum McKenzie  <callum@spooky-possum.org>
+
+	* gswitchit-applet.c: Patch from Matthias Clasen to fix a memory
+	leak. Bug 549890.
+
 2008-04-28  Sergey Udaltsov <svu@gnome.org>
 
 	* gswitchit-applet.c: a bit of code cleanup, thanks to Yuriy,
